--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -16,14 +16,14 @@
         android:text="TextView"
         android:layout_centerHorizontal="true"
         android:textColor="@color/colorRecipeDescriptionText"
-        android:textSize="24sp" />
+        android:textSize="28sp" />
 
     <ImageView
         android:id="@+id/imageViewRecipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewRecipeTitle"
-        android:scaleType="centerInside"
+        android:scaleType="fitXY"
         android:adjustViewBounds="true"/>
 
     <TextView
