Maps search by latitude, longitude. Fixed Date. Added images to ListView.

--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -2,11 +2,79 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Tab 1"
-        android:textSize="36sp" />
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ScrollViewRecipe"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:id="@+id/textViewRecipeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:layout_centerHorizontal="true"
+                android:textSize="28sp" />
+
+            <ImageView
+                android:id="@+id/imageViewRecipe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textViewRecipeTitle"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"/>
+
+            <TextView
+                android:id="@+id/textViewRecipeDifficultyPersonsTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/imageViewRecipe"
+                android:layout_centerHorizontal="true"
+                android:text="TextView"
+                android:layout_marginTop="20dp"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textViewRecipeCreationDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textViewRecipeDifficultyPersonsTime"
+                android:layout_alignParentRight="true"
+                android:text="TextView"
+                android:layout_marginTop="10dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textViewRecipeDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textViewRecipeCreationDate"
+                android:layout_centerHorizontal="true"
+                android:text="TextView"
+                android:textSize="18sp"
+                android:layout_marginTop="30dp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/textViewPriprema"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textViewRecipeDescription"
+                android:text="Priprema:"
+                android:layout_marginTop="30dp"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textViewRecipePreparationSteps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:layout_below="@id/textViewPriprema" />
+
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
