Youtube API implementation.

--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -75,6 +75,12 @@
                 android:textSize="18sp"
                 android:layout_below="@id/textViewPriprema" />
 
+            <Button
+                android:id="@+id/buttonRecipe"
+                android:layout_below="@id/textViewRecipePreparationSteps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="YoutubeVideo"/>
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
