--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="100"
+    android:orientation="vertical"
     android:weightSum="100">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="50"
-        android:weightSum="100">
-
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_weight="50"
             android:id="@+id/image"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"/>
-
-        <TextView
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:text="TextView1"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:id="@+id/textView1"
-            android:layout_weight="50"/>
+            android:layout_height="200dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="30"
+            android:adjustViewBounds="true"
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
+            android:paddingEnd="5dp"
+            android:paddingRight="5dp"
+            android:scaleType="fitXY" />
 
-    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_weight="20"
+        android:height="32dp"
+        android:gravity="top"
+        android:paddingLeft="5dp"
+        android:text="TextView1"
+        android:textAllCaps="true"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+
 
 </LinearLayout>
