--- a/app/src/main/res/layout/adapter_view_layout.xml
+++ b/app/src/main/res/layout/adapter_view_layout.xml
@@ -23,9 +23,9 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_weight="20"
+        android:layout_width="255dp"
+        android:layout_height="68dp"
+        android:layout_weight="10"
         android:height="32dp"
         android:gravity="top"
         android:paddingLeft="5dp"
