--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -16,5 +16,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAqR8v4NtJN1sc-q2FO4MfsvKClTe_ak_c</string>
 </resources>
