--- a/app/src/main/res/layout/adapter_comment_layout.xml
+++ b/app/src/main/res/layout/adapter_comment_layout.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="100">
+    android:layout_height="match_parent">
 
     <TextView
         android:gravity="center"
         android:textAlignment="center"
         android:text="TextView1"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:id="@+id/textView1"/>
+        android:layout_height="wrap_content"
+        android:paddingVertical="30dp"
+        android:id="@+id/textView1" />
 
 </LinearLayout>
