Setting text view color for ingredients and preparation steps

--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -124,7 +124,9 @@
                 android:layout_below="@id/viewHorizontalLine2"
                 android:layout_marginTop="12dp"
                 android:text="Sastojci:"
-                android:textSize="24sp" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <ListView
                 android:id="@+id/listViewIngredients"
@@ -149,7 +151,9 @@
                 android:layout_below="@id/viewHorizontalLine3"
                 android:layout_marginTop="12dp"
                 android:text="Priprema:"
-                android:textSize="24sp" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <ListView
                 android:id="@+id/listViewPreparationSteps"
