--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,6 +19,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:text="Search by:"
         app:layout_constraintStart_toStartOf="@+id/swiperefresh"
@@ -51,7 +52,7 @@
 
         <RadioButton
             android:id="@+id/searchDifficulty"
-            android:layout_width="106dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Difficulty" />
@@ -60,8 +61,8 @@
 
     <SearchView
         android:id="@+id/simpleSearchView"
-        android:layout_width="395dp"
-        android:layout_height="46dp"
+        android:layout_width="371dp"
+        android:layout_height="36dp"
         android:layout_marginTop="56dp"
         android:clickable="true"
         android:focusable="true"
@@ -73,8 +74,8 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
-        android:layout_width="394dp"
-        android:layout_height="504dp"
+        android:layout_width="392dp"
+        android:layout_height="465dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:paddingStart="16dp"
